# compiler-tools

./: .gitignore  README.md  cabal.project  flake.nix  test.utlc
NOTES/blog/: 2025-12-23.md
NOTES/labbook/: 2025-11-24.md  2025-11-26.md
NOTES/logbook/: 2025-11-24.md  2025-11-28.md  2025-12-05.md  2025-12-23.md  2026-01-08.md
common-concrete-syntax/: CHANGELOG.md  LICENSE  README.md  common-concrete-syntax.cabal
common-concrete-syntax/docs/: STANDARD-ccs.md  proposal-0001-no-signed-int-zero.md  scratchword-DELME.md
common-concrete-syntax/src/Language/: CCS.hs
common-concrete-syntax/src/Language/CCS/: Error.hs  Lexer.hs  Location.hs  Parser.hs  Recognize.hs
common-concrete-syntax/src/Language/CCS/Lexer/: Assemble.hs  Cover.hs  Decode.hs  Indentation.hs  Line.hs  Morpheme.hs  NoiseReduction.hs  Pipeline.hs  Sandhi.hs
common-concrete-syntax/src/Language/CCS/Lexer/Assemble/: Numbers.hs  Strings.hs
common-concrete-syntax/src/Language/CCS/Lexer/Morpheme/: AssembleNumbers.hs  LineEndings.hs  NoiseReduction.hs
common-concrete-syntax/src/Language/CCS/Lexer/Morpheme/Assemble/: Numbers.hs  Strings.hs
common-concrete-syntax/src/Language/CCS/Lexer/Sandhi/: Indentation.hs
common-concrete-syntax/src/Language/CCS/Recognize/: Core.hs
common-concrete-syntax/src/Language/CCS/Token/: Raw.hs
common-concrete-syntax/test/: Main.hs
common-concrete-syntax/test/cases/: .gitattributes  allLexemes.golden  allLexemes.input  allRawLexemes.golden  allRawLexemes.input  allTokens.golden  allTokens.input  allTrees.golden  allTrees.input
dev-scripts/: audit.bash  labbook.bash  logbook.bash  test.bash
menagerie/: CHANGELOG.md  menagerie.cabal
menagerie/app/: Main.hs
menagerie/src/: Utlc.hs
source-location/: CHANGELOG.md  source-location.cabal
source-location/src/Language/: Location.hs  Text.hs
