cabal-version:      3.0
name:               common-concrete-syntax
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Marseille Bouchard Demko
maintainer:         marseillebd@proton.me
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    ghc-options: -Wall
    build-depends:
      , base ^>=4.21.0.0
      , bytestring
      , streaming
      , text

library
    import:           common
    exposed-modules:
      Language.CCS.Lexer.Line
      Language.CCS.Lexer.Morpheme
      Language.CCS.Lexer.Morpheme.NoiseReduction
      Language.CCS.Lexer.Morpheme.Assemble.Numbers
      Language.CCS.Lexer.Morpheme.Assemble.Strings
      Language.CCS.Lexer.Pipeline
      Language.CCS.Error
    -- other-modules:
    -- other-extensions:
    build-depends:
      , nanopass >=0.0.3.2
      , source-location
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
      , DataKinds
      , DeriveFunctor
      , LambdaCase
      , MultiWayIf
      , NamedFieldPuns
      , OverloadedRecordDot
      , OverloadedStrings
      , QuasiQuotes
      , ScopedTypeVariables
      , StandaloneDeriving
      , TemplateHaskell
      , TypeApplications
    other-extensions:


test-suite common-concrete-syntax-test
    import:           common
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
      , common-concrete-syntax
      , filepath
      , tasty
      , tasty-golden
