cabal-version:      3.0
name:               common-concrete-syntax
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Marseille Bouchard Demko
maintainer:         marseillebd@proton.me
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    ghc-options: -Wall
    build-depends:
      , base >=4.18.0.0 && <4.22
      , bytestring
      , streaming
      , text ^>=2.1.2

library
    import:           common
    exposed-modules:
      Language.CCS.Error
      Language.CCS.Lexer.Assemble
      Language.CCS.Lexer.Morpheme
      Language.CCS.Lexer.NoiseReduction
      Language.CCS.Lexer.Pipeline
      Language.CCS.Lexer.Indentation
      Language.CCS.Lexer.Sandhi
    -- other-modules:
    -- other-extensions:
    build-depends:
      , nanopass >=0.0.3.3
      , source-location
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
      , DataKinds
      , DeriveFunctor
      , LambdaCase
      , MultiWayIf
      , NamedFieldPuns
      , OverloadedRecordDot
      , OverloadedStrings
      , QuasiQuotes
      , ScopedTypeVariables
      , StandaloneDeriving
      , TemplateHaskell
      , TypeApplications
    other-extensions:


test-suite common-concrete-syntax-test
    import:           common
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
      , common-concrete-syntax
      , filepath
      , tasty
      , tasty-golden
