cabal-version:      3.0
name:               menagerie
version:            0.1.0.0
synopsis:           exampel language implemented with my compiler tools
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Marseille Bouchard Demko
maintainer:         marseillebd@proton.me
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall
    build-depends:
      base ^>=4.21.0.0

library
    import:           warnings
    exposed-modules:  Utlc
    -- other-modules:
    -- other-extensions:
    build-depends:
      , nanopass
      , common-concrete-syntax
      , bytestring
      , text
    hs-source-dirs:   src
    default-language: Haskell2010

executable menagerie
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        menagerie

    hs-source-dirs:   app
    default-language: Haskell2010
