cabal-version:      3.0
name:               source-location
version:            0.1.0.0
synopsis:
    types and utility functions for identifying locations in source code

-- description:
homepage:           https://github.com/marseillebd/compiler-tools
license:            BSD-3-Clause
license-file:       LICENSE
author:             Marseille Bouchard Demko
maintainer:         marseillebd@proton.me
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Language.Location
    -- other-modules:
    -- other-extensions:
    build-depends:
      , base >=4.18.0.0 && <4.22
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
      DataKinds
      LambdaCase
      NamedFieldPuns
      OverloadedRecordDot
      TypeApplications
